# dmailfi_protocol

./: .gitignore  Cargo.toml  README.md  build.py  dfx.json  package-lock.json  package.json
src/dmailfi_core/: Cargo.toml  dmailfi_core.did
src/dmailfi_core/src/: lib.rs  types.rs
src/dmailfi_icp_backend/: Cargo.toml  build.rs  dmailfi_icp_backend.did  smtp_servers.json
src/dmailfi_icp_backend/src/: lib.rs  types.rs
src/dmailfi_icp_frontend/: package-lock.json  package.json  tailwind.config.js
src/dmailfi_icp_frontend/src/lib/: canisters.js
src/dmailfi_icp_frontend/src/routes/: +layout.svelte  +page.svelte
src/dmailfi_icp_frontend/src/routes/whitepaper/: +page.svelte
src/dmailfi_sdk/: package.json  tsconfig.json
src/dmailfi_sdk/src/: config.ts  index.ts  types.ts
src/dmailfi_types/: Cargo.toml
src/dmailfi_types/src/: lib.rs
src/dmailfi_web_inbox/: package.json  tsconfig.json  vite.config.ts
src/dmailfi_web_inbox/src/: App.tsx  Mail.tsx  data.tsx
src/dmailfi_web_inbox/src/components/: editor.tsx  mail-display.tsx  mail-list.tsx  nav.tsx  use-mail.tsx
src/dmailfi_web_inbox/src/store/: app.ts
