[package]
name = "dmailfi_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
serde = "1.0.132"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
hex = "0.4.3"
serde_bytes = "0.11.14"
serde_json = "1.0.114"
email_address = "0.2.4"
dmailfi_types = {path = "../dmailfi_types"}
sha2 = "0.10.8"
